Added Token , middleware , resolver and auth controller

--- a/Multi-Tenant-API/appsettings.json
+++ b/Multi-Tenant-API/appsettings.json
@@ -8,5 +8,12 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "Jwt": {
+    "Secret": "your-secret-key-here",
+    "Issuer": "Saied",
+    "Audience": "User",
+    "ExpirationInMinutes": 60
+  }
 }
