--- a/Multi-Tenant-API/appsettings.json
+++ b/Multi-Tenant-API/appsettings.json
@@ -2,14 +2,35 @@
   "ConnectionStrings": {
     "DefaultConnection": "Data Source=app.db"
   },
-  "Logging": {
-    "LogLevel": {
+  "Serilog": {
+    "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File" ],
+    "MinimumLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
+      "Override": {
+        "Microsoft": "Warning",
+        "System": "Warning"
+      }
+    },
+    "WriteTo": [
+      { "Name": "Console" },
+      {
+        "Name": "File",
+        "Args": {
+          "path": "/logs/log-.txt",
+          "rollingInterval": "Day",
+          "rollOnFileSizeLimit": true,
+          "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
+        }
+      }
+    ],
+    "Enrich": [ "FromLogContext", "WithMachineName", "WithThreadId" ]
   },
   "AllowedHosts": "*",
-
+  "Outbox": {
+    "IntervalInSeconds": 10,
+    "BatchSize": 50,
+    "RetryThreshold": 3
+  },
   "Jwt": {
     "Secret": "your-secret-key-here",
     "Issuer": "Saied",
