Modified Token - Updated Secret Key - Added Readme.md and Demo Test

--- a/Multi-Tenant-API/appsettings.json
+++ b/Multi-Tenant-API/appsettings.json
@@ -16,7 +16,7 @@
       {
         "Name": "File",
         "Args": {
-          "path": "/logs/log-.txt",
+          "path": "logs\\log-.txt",
           "rollingInterval": "Day",
           "rollOnFileSizeLimit": true,
           "formatter": "Serilog.Formatting.Compact.CompactJsonFormatter, Serilog.Formatting.Compact"
@@ -32,7 +32,6 @@
     "RetryThreshold": 3
   },
   "Jwt": {
-    "Secret": "your-secret-key-here",
     "Issuer": "Saied",
     "Audience": "User",
     "ExpirationInMinutes": 60
